# nvim-config

./: .clang-tidy  .clangd  .gitignore  .luarc.json  CMakeLists.txt  LICENSE  README.md  build_clicker.py  build_lieutenant.py  clicker.c  cook_sounds.py  dashboard.py  init.lua  lazy-lock.json  notes.md  profile.ps1  setup_profile.py  switch_to_lite_crt.py  switch_to_retro.py  terminal_manager.py  unfuck_WindowsApps.py
shaders/: neon.hlsl  retro_lite.hlsl
